editing mobile images

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ URI     : https://colorlib.com
                                 <span class="ti-target gradient-fill ti-3x mr-3"></span>
                                 <div class="media-body">
                                     <h4 class="card-title">One-click</h4>
-                                    <p class="card-text">Start a timer right away, 1 pomodoro, a short break or a long pause </p>
+                                    <p class="card-text">Start a timer right away, a pomodoro, a short break or a long pause </p>
                                 </div>
                             </div>
                         </div>
@@ -251,8 +251,8 @@ URI     : https://colorlib.com
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
                         <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
-                        <h2>Launch your App</h2>
-                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati vel exercitationem eveniet vero maxime ratione </p>
+                        <h2>Start your day with us!</h2>
+                        <p class="mb-4">Pomidor can help you organize your day in pomodoros </p>
                         <a href="#" class="btn btn-primary">Read more</a></div>
                 </div>
             </div>
