--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ URI     : https://colorlib.com
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
                     <div>
-                        <div class="box-icon"><span class="ti-rocket gradient-fill ti-3x"></span></div>
+                        <div class="box-icon"><span class="ti-power-off	 gradient-fill ti-3x"></span></div>
                         <h2>Start your day with us!</h2>
                         <p class="mb-4">Pomidor can help you organize your day in pomodoros </p>
                         <a href="#" class="btn btn-primary">Read more</a></div>
