--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ URI     : https://colorlib.com
                 <div class="col-lg-6 offset-lg-6">
                     <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                     <h2>Discover our App</h2>
-                    <p class="mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati vel exercitationem eveniet vero maxime ratione </p>
-                    <a href="#" class="btn btn-primary">Read more</a>
+                    <p class="mb-4">Are you looking for a simple app to organize your daily tasks and fit them into pomodoros? </p>
+                    <a href="#" class="btn btn-primary">Download our app!</a>
                 </div>
             </div>
             <div class="perspective-phone">
