--- a/index.html
+++ b/index.html
@@ -272,22 +272,22 @@ URI     : https://colorlib.com
                         <li class="media">
                             <div class="circle-icon mr-4">1</div>
                             <div class="media-body">
-                                <h5>Create an Account</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium obcaecati vel exercitationem </p>
+                                <h5>Schedule your pomodoros</h5>
+                                <p>Prioritize your tasks and fit them into pomodoros</p>
                             </div>
                         </li>
                         <li class="media my-4">
                             <div class="circle-icon mr-4">2</div>
                             <div class="media-body">
-                                <h5>Share with friends</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium obcaecati vel exercitationem eveniet</p>
+                                <h5>Start your timer</h5>
+                                <p>Use the timer for a pomodoro, a short break or a long break after a whole cycle</p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="circle-icon mr-4">3</div>
                             <div class="media-body">
-                                <h5>Enjoy your life</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium obcaecati vel exercitationem </p>
+                                <h5>Analyze past days</h5>
+                                <p>Review how the pomodoro technique helps you out attain the optimization of your time available each day</p>
                             </div>
                         </li>
                     </ul>
