--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ URI     : https://colorlib.com
 
     <header class="bg-gradient" id="home">
         <div class="container mt-5">
-            <h1>Pomidor App</h1>
-            <p class="tagline">Organize your daily pomodoros. Start a quick timer. Understand time usage in your previous days. </p>
+            <h1>The Pomidor App</h1>
+            <p class="tagline">Organize your daily schedule along the pomodoro technique with simplicity </p>
         </div>
         <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid"></div>
     </header>
