--- a/index.html
+++ b/index.html
@@ -524,7 +524,23 @@ URI     : https://colorlib.com
     <script src="js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
-
+	<!-- Default Statcounter code for Pomidor test run
+	https://www.pomidor.com.ar -->
+	<script type="text/javascript">
+	var sc_project=12675340; 
+	var sc_invisible=1; 
+	var sc_security="480694ce"; 
+	</script>
+	<script type="text/javascript"
+	src="https://www.statcounter.com/counter/counter.js"
+	async></script>
+	<noscript><div class="statcounter"><a title="Web Analytics"
+	href="https://statcounter.com/" target="_blank"><img
+	class="statcounter"
+	src="https://c.statcounter.com/12675340/0/480694ce/1/"
+	alt="Web Analytics"
+	referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+	<!-- End of Statcounter Code -->
 </body>
 
 </html>
