removed all lorem ipsum, hopefully

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ URI     : https://colorlib.com
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- Main css -->
     <link href="css/style.css" rel="stylesheet">
+	 <!-- FavIcon -->
+	<link rel="shortcut icon" type="image/jpg" href="./favicon.ico"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
@@ -160,17 +162,17 @@ URI     : https://colorlib.com
 
             <ul class="nav nav-tabs nav-justified" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#communication">Communication</a>
+                    <a class="nav-link active" data-toggle="tab" href="#communication">Planning</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#schedule">Scheduling</a>
+                    <a class="nav-link" data-toggle="tab" href="#schedule">Starting</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#messages">Messages</a>
+                    <a class="nav-link" data-toggle="tab" href="#messages">Reviewing</a>
                 </li>
-                <li class="nav-item">
+            <!--<li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#livechat">Live Chat</a>
-                </li>
+                </li> -->
             </ul>
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="communication">
@@ -178,13 +180,11 @@ URI     : https://colorlib.com
                         <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
 
-                            <h2>Communicate with ease</h2>
-                            <p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
-                                congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                            <h2>Plan your day</h2>
+                            <p class="lead">Identify and pioritize your tasks for the day. </p>
+                            <p>Include all the tasks you need to get done that day, then section them and adapt them to the pomodoros you have available on that time frame.
                             </p>
-                            <p> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
-                                sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                            <p> Add the tasks to each pomodoro and get a quick overview of what your day will be like
                             </p>
                         </div>
                     </div>
@@ -192,13 +192,11 @@ URI     : https://colorlib.com
                 <div class="tab-pane fade" id="schedule">
                     <div class="d-flex flex-column flex-lg-row">
                         <div>
-                            <h2>Scheduling when you want</h2>
-                            <p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
-                                congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                            <h2>Quick start</h2>
+                            <p class="lead">Get started right away with the quick timer. </p>
+                            <p>If you have already organized your day you can go to the home screen and start a quick 25-minute slot right away.
                             </p>
-                            <p> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
-                                sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                            <p> You can also start a short 5-minute break or a long 25-minute break.
                             </p>
                         </div>
                         <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
@@ -208,18 +206,16 @@ URI     : https://colorlib.com
                     <div class="d-flex flex-column flex-lg-row">
                         <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
-                            <h2>Realtime Messaging service</h2>
-                            <p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
-                                congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                            <h2>Reporting</h2>
+                            <p class="lead">Get insight about your past activity</p>
+                            <p>Understanding how have you been using your time slots available will help you plan more efficiently.
                             </p>
-                            <p> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
-                                sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                            <p> Get the reporting information at a glance on you control board.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="livechat">
+           <!-- <div class="tab-pane fade" id="livechat">
                     <div class="d-flex flex-column flex-lg-row">
                         <div>
                             <h2>Live chat when you needed</h2>
@@ -233,7 +229,7 @@ URI     : https://colorlib.com
                         </div>
                         <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                     </div>
-                </div>
+                </div> -->
             </div>
 
 
@@ -304,38 +300,6 @@ URI     : https://colorlib.com
     <!-- // end .section -->
 
 
-    <div class="section">
-        <div class="container">
-            <div class="section-title">
-                <small>TESTIMONIALS</small>
-                <h3>What our Customers Says</h3>
-            </div>
-
-            <div class="testimonials owl-carousel">
-                <div class="testimonials-single">
-                    <img src="images/client.png" alt="client" class="client-img">
-                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                    <p class="text-primary">United States</p>
-                </div>
-                <div class="testimonials-single">
-                    <img src="images/client.png" alt="client" class="client-img">
-                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                    <p class="text-primary">United States</p>
-                </div>
-                <div class="testimonials-single">
-                    <img src="images/client.png" alt="client" class="client-img">
-                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                    <p class="text-primary">United States</p>
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-    <!-- // end .section -->
 
 
     <div class="section light-bg" id="gallery">
@@ -365,21 +329,19 @@ URI     : https://colorlib.com
         <div class="container">
             <div class="section-title">
                 <small>PRICING</small>
-                <h3>Upgrade to Pro</h3>
+                <h3>Upgrade to Mario</h3>
             </div>
 
             <div class="card-deck">
                 <div class="card pricing">
                     <div class="card-head">
-                        <small class="text-primary">PERSONAL</small>
-                        <span class="price">$14<sub>/m</sub></span>
+                        <small class="text-primary">Luigi</small>
+                        <span class="price">Free<sub></sub></span>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <div class="list-group-item">10 Projects</div>
-                        <div class="list-group-item">5 GB Storage</div>
-                        <div class="list-group-item">Basic Support</div>
-                        <div class="list-group-item"><del>Collaboration</del></div>
-                        <div class="list-group-item"><del>Reports and analytics</del></div>
+                        <div class="list-group-item">Create your pomodoros</div>
+                        <div class="list-group-item">Quick timer</div>
+                        <div class="list-group-item">Basic reports</div>
                     </ul>
                     <div class="card-body">
                         <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
@@ -387,21 +349,21 @@ URI     : https://colorlib.com
                 </div>
                 <div class="card pricing popular">
                     <div class="card-head">
-                        <small class="text-primary">FOR TEAMS</small>
-                        <span class="price">$29<sub>/m</sub></span>
+                        <small class="text-primary">Mario</small>
+                        <span class="price">$0.99<sub>/m</sub></span>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <div class="list-group-item">Unlimited Projects</div>
-                        <div class="list-group-item">100 GB Storage</div>
-                        <div class="list-group-item">Priority Support</div>
-                        <div class="list-group-item">Collaboration</div>
-                        <div class="list-group-item">Reports and analytics</div>
+                        <div class="list-group-item">Everything Luigi has</div>
+                        <div class="list-group-item">plus</div>
+                        <div class="list-group-item">Advanced reports</div>
+                        <div class="list-group-item">Historical reports</div>
+                        <div class="list-group-item">Add/view your tasks</div>
                     </ul>
                     <div class="card-body">
                         <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
-                <div class="card pricing">
+			<!--<div class="card pricing">
                     <div class="card-head">
                         <small class="text-primary">ENTERPRISE</small>
                         <span class="price">$249<sub>/m</sub></span>
@@ -416,7 +378,7 @@ URI     : https://colorlib.com
                     <div class="card-body">
                         <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- // end .pricing -->
 
@@ -437,16 +399,16 @@ URI     : https://colorlib.com
             <div class="row pt-4">
                 <div class="col-md-6">
                     <h4 class="mb-3">Can I try before I buy?</h4>
-                    <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                    <p class="light-font mb-5">You can use the Luigi plan for 12 months for free and try it out. </p>
                     <h4 class="mb-3">What payment methods do you accept?</h4>
-                    <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                    <p class="light-font mb-5">You can pay using your credit card or Paypal. </p>
 
                 </div>
                 <div class="col-md-6">
                     <h4 class="mb-3">Can I change my plan later?</h4>
-                    <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                    <p class="light-font mb-5">Plan can be upgraded at any time. Likewise, you can go back to free version at any time. </p>
                     <h4 class="mb-3">Do you have a contract?</h4>
-                    <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                    <p class="light-font mb-5">No contract. You can terminate the service whenever you please </p>
 
                 </div>
             </div>
@@ -463,13 +425,13 @@ URI     : https://colorlib.com
 
                 <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
                 <h2>Download Anywhere</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. Rapidiously visualize optimal ROI rather than enterprise-wide methods of empowerment. </p>
+                <p class="tagline">Available for Android. Quickly organize your day and add your pomodoros and their tasks to your Google calendar. </p>
                 <div class="my-4">
 
-                    <a href="#" class="btn btn-light"><img src="images/appleicon.png" alt="icon"> App Store</a>
+                    <a class="btn btn-comingsoon"><img src="images/appleicon.png" alt="icon" > App Store - Coming Soon!</a>
                     <a href="#" class="btn btn-light"><img src="images/playicon.png" alt="icon"> Google play</a>
                 </div>
-                <p class="text-primary"><small><i>*Works on iOS 10.0.5+, Android Kitkat and above. </i></small></p>
+                <p class="text-primary"><small><i>*Works on Android Kitkat and above. </i></small></p>
             </div>
         </div>
 
@@ -480,23 +442,23 @@ URI     : https://colorlib.com
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left">
-                    <p class="mb-2"> <span class="ti-location-pin mr-2"></span> 1485 Pacific St, Brooklyn, NY 11216 USA</p>
+                    <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Blanco Encalada 2681 - CABA - Argentina</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
-                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:support@mobileapp.com">support@mobileapp.com</a>
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:leo.prada@mursa.net.ar">leo.prada@mursa.net.ar</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block">
                         <p class="mb-0">
-                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:51836362800">518-3636-2800</a>
+                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:+5491154560723">+549-11-5456-0723</a>
                         </p>
                     </div>
 
                 </div>
                 <div class="col-lg-6">
                     <div class="social-icons">
-                        <a href="#"><span class="ti-facebook"></span></a>
-                        <a href="#"><span class="ti-twitter-alt"></span></a>
+                        <a href="https://www.facebook.com/profile.php?id=100074902117190" target="_blank"><span class="ti-facebook"></span></a>
+                        <a href="https://twitter.com/PomidorApp"><span class="ti-twitter-alt"></span></a>
                         <a href="#"><span class="ti-instagram"></span></a>
                     </div>
                 </div>
