--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ URI     : https://colorlib.com
                     <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Blanco Encalada 2681 - CABA - Argentina</p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
-                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:leo.prada@mursa.net.ar">leo.prada@mursa.net.ar</a>
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:leandroprada@gmail.com">leandroprada@gmail.com</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block">
